# unix-connect

./: .makefile.conf.in  CHANGES  CHANGES.configure  COPYRIGHT  ChangeLog  ChangeLog.configure  INSTALL  Makefile  Makefile..  Makefile.dummy  Makefile.global.in  Makefile.in  Makefile.includes  POLICY  PROBLEMS  README  README.1st  README.systeme  ROADMAP  THANX  TODO  changelog  configure  configure.in  configure.old  todo
date/: Makefile  Makefile.date  Makefile.in  README.datelib  dateabstoks.c  datetok.c  datetok.h  getindate.c
docs/: INSTALL.OLD  THANX  abschied.z38  bnews.patch  changes.doc  ger-texinfo.tex  iso8859-1.tex  lizenz.deutsch  mailing-list.archiv  texinfo.tex  unix-connect.dvi  unix-connect.texinfo  xpoint.dok  zcon31.changes  zconnect.doc
etc/: Makefile  alias  approved  autoeintrag.zconnect  config.in  config.in.in  myself.zconnect  systems.sample  xprogs.in  zconnecthosts
gate/: Makefile  Makefile.gate  Makefile.in  alias.c  apc_a2b.c  atob.c  gtools.c  iso2pc.c  mime.c  pc2iso.c  testeda.c  testmime  testmime.c  uuapprove.c  uuconv.c  uurnews.c  uurnews2.c  uursmtp.c  uursmtp2.c  uuwnews.c  uuwnews2.c  uuwsmtp.c  zconv.c
hdlib/: Makefile  Makefile.hdlib  Makefile.in  crc.c  delheader.c  find.c  freepara.c  gperf.prefix  hash.epilogue  header.lst  joinheader.c  pk.erg  rdpara.c  test.erg  test.in  testheader.c  uurdpara.c  wrpara.c
helpers/: Makefile  makesubst  update
include/: alias.h  apc_a2b.h  auth.h  boxstat.h  calllib.h  config.h  config.h.in  crc.h  datelib.h  gtools.h  hayes.h  hd_nlist.h  header.h  idir.h  istring.h  iwait.h  lib.h  line.h  locknames.h  locknew.h  mime.h  ministat.h  pattern.h  policy.h  policy.h.sco  policy.h.sunos  policy.h.svr4  sysexits2.h  track.h  trap.h  utility.h  uuapprove.h  uuconv.h  uudebug.h  uulog.h  version.h  xprog.h  zconnect.h  zconv.h
include/os-386bsd/: sysdep.h
include/os-bsd/: sysdep.h
include/os-bsdi/: sysdep.h
include/os-freebsd/: sysdep.h
include/os-isc/: sysdep.h
include/os-linux/: policy.h  sysdep.h
include/os-netbsd/: policy.h  sysdep.h
include/os-next/: sysdep.h
include/os-sco/: policy.h  sysdep.h
include/os-sunos/: policy.h  sysdep.h
include/os-svr4/: policy.h  sysdep.h
include/os-sysv/: sysdep.h
lib/: Makefile  Makefile.in  Makefile.lib  backup.c  hayes.c  lockwait.c  ministat.c  ministat.neu  pattern.c  rawtty.c  readonedir.c  snprintf.c  stccpy.c  str2eda.c  strcdup.c  strdup.c  stricmp.c  strlwr.c  strupr.c  track.c  trap.c  utility.c  uudebug.c  uufatal.c  uulog.c
mail-and-news/: Makefile
mail-and-news/cnews/: Makefile  README  batchparms  viazconnect  viazconnect.in
mail-and-news/inn/: Makefile  README  newsfeeds  send-zcon  send-zcon.in
mail-and-news/no/: Makefile
mail-and-news/postfix/: Makefile  README.in  RSMTP  run_as.c  ucpf.pl.in  zbatchsmtp.in
mail-and-news/qmail/: Makefile  README  RSMTP  import.SH  maildir2bsmtp  rsmtp  zbatchsmtp.in
mail-and-news/sendmail/: Makefile  README  RSMTP.in  mail.uuconnect  mail.uuconnect.in  mail.zconnect  uconnect.m4  uconnect.m4.in  zbatchsmtp.in  zconnect.m4
mail-and-news/smail/: Makefile  RSMTP  directspool.sh  gatepaths  routers  transports  zbatchsmtp.in
man/: bugreports.n  uuwnews.1  uuwsmtp.1
online/: Makefile  Makefile.in  Makefile.online  action.c  auth.c  call.c  common.c  filedialog.c  filemaster.c  import.c  januslogin.c  lock.c  lockdev.c  locknames.h  locknew.c  myself.c  pingpong.c  prepare.c  prologue.c  receiver.c  sysdialog.c  sysmaster.c  test.erg  testrun.c  xprog.c  zconnect.h
rsmtp/: COPYRIGHT  GNUmakefile  Makefile  bsmtp.c  rsmtp.c  version.h
shell/: Makefile  Makefile.in  Makefile.shell  anruf.SH  anruf.in  auspack.SH  auspack.in  cron.d.hourly.in  einpack.in  import.SH  import.in  logrotate.d.entry.in  prearc.SH  prearc.in  sendfile.perl  update  uumlist.in  zbatchsmtp.qmail.SH
tools/: Makefile  Makefile.in  Makefile.tools  list-systems.c  zconsplit.c
